# RubiksCube-MCTS

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  example.py  model.py  search.py  train.py  train2.py  utils.py
benches/: turn_bench.rs
src/: cube.rs  cubies.rs  errors.rs  lib.rs  main.rs  moves.rs  orientation.rs  permutation.rs  pyo3.rs  search.rs
train/: env.py  main.py  model.py  notes.md  scrambler.py  time.py
train/tests/: test_bench.py  test_env.py
