[package]
name = "rubikscube"
version = "0.1.0"
edition = "2021"

[lib]
name = "rubikscube"
crate-type = ["cdylib", "rlib"]




[dependencies]
rand = {version = "0.8.5"}
strum = "0.24"
strum_macros = "0.24"

# python
pyo3 = { version = "0.16.3", features = ["extension-module"], optional = true }
numpy = {version = "0.16.2", optional = true}


[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "turn_bench"
harness = false

[features]
default = ["python"]
python = ["pyo3", "numpy"]

[profile.release]
lto = true
opt-level = 3
panic="abort"
